Tag v0.0.1 + comprehensive README with 18 new TODO cases
- Tagged current state as v0.0.1
- Rewrote README with proper structure, case table, and diagnosis tools
- Added 18 new TODO cases organized by priority:
  - High: Deadlock, GC thrashing, Metaspace OOM, off-heap leak, connection pool
  - Medium: Thread pool saturation, allocation pressure, stack overflow, zombie threads
  - Advanced: JIT issues, safepoint stalls, FD leak, DNS hang, container limits
- Added JVM debugging flags reference and tools table

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>